# ventuno-collision-avoidance

./: .gitignore  README.md  SETUP.md  YOLOX_CPU_ONNX.md  requirements-export.txt  requirements.txt
.claude/skills/ventuno-setup/: SKILL.md
.claude/skills/ventuno-setup/references/: create3-connection.md  executorch-qnn.md
docs/: projecthub_description.md
launch/: collision_avoidance.launch.py  object_tracking.launch.py
models/: README.md
scripts/: create3-usb-gadget.service  download_models.py  install_ventuno_deps.sh  yolox_detector_cpu.py
src/collision_avoider/: package.xml  setup.cfg  setup.py
src/collision_avoider/collision_avoider/: controller.py  data_collection.py  movement_test.py
src/collision_avoider/config/: avoider.yaml
src/collision_avoider/launch/: avoider.launch.py  data_collection.launch.py  movement_test.launch.py
src/collision_avoider/test/: test_collision_controller.py
src/collision_classifier/: CMakeLists.txt  package.xml
src/collision_classifier/config/: classifier.yaml
src/collision_classifier/include/collision_classifier/: collision_classifier_node.hpp  cpu_backend.hpp  inference_backend.hpp  preprocess.hpp  qnn_backend.hpp
src/collision_classifier/launch/: classifier.launch.py  dataset_classifier.launch.py
src/collision_classifier/src/: collision_classifier_node.cpp  cpu_backend.cpp  dataset_image_publisher_node.cpp  main.cpp  preprocess.cpp  qnn_backend.cpp
src/oak_camera/src/: oak_camera_node.cpp
src/yolox_detector/: CMakeLists.txt  package.xml
src/yolox_detector/config/: detector.yaml
src/yolox_detector/include/yolox_detector/: cpu_backend.hpp  inference_backend.hpp  postprocess.hpp  qnn_backend.hpp  yolox_detector_node.hpp
src/yolox_detector/launch/: detector.launch.py
src/yolox_detector/src/: cpu_backend.cpp  main.cpp  postprocess.cpp  qnn_backend.cpp  yolox_detector_node.cpp
tools/: collision_model.py  export_resnet18_cpu.py  export_resnet18_onnx.py  export_resnet18_qnn.py  export_yolox_cpu.py  export_yolox_onnx.py  export_yolox_qnn.py  requirements-export.txt  train_collision_resnet18.py
