<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_avoider</name>
  <version>0.1.0</version>
  <description>
    Collision avoidance for the Create 3 base. The controller consumes the
    collision_classifier /collision/classification topic and drives the robot
    forward when the path is free and turns in place when it is blocked. Also
    provides a keyboard-driven data-collection node and an open-loop movement
    test.
  </description>
  <maintainer email="vkommera@ucsd.edu">ventuno</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
