<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_classifier</name>
  <version>0.1.0</version>
  <description>Free/blocked collision-avoidance image classifier (ResNet18) ROS 2 node with ExecuTorch XNNPACK (CPU) and QNN (NPU) backends</description>
  <maintainer email="vkommera@ucsd.edu">ventuno</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
